--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <video id="remoteVideo" autoplay="" muted="" width="300" height="300" style="position: absolute;left: 55px;top: 13px; width:1019px; height:465px;"></video>
             <canvas id="canvasOutputLocal" width="320" height="308" style="border:1px solid; display: none;"></canvas>
 			<img id="imgUsed" src="face-ic.png" style="visibility: hidden;position: absolute;left: 1092px;top: 10px;width: 172px;height: 266px;">
-			<button id="hangup" onclick="stopLocalStream();"  style="position:absolute;left:500;top:440px;border-radius:50px;">
+			<button id="hangup" onclick="stopLocalStream();"  style="height:100px;width:100px;position:absolute;left:600;top:800px;border-radius:50px;">
 			<img src="hangup.png" style="width:40px"></button>
         </div>
     </div>
